welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:7: error: type mismatch;
 found   : Unit
 required: Int
if ((a<=10 || a>=20) && (b<=10 || b>=20))
^